--- a/books.html
+++ b/books.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Books that I have read</title>
+    <link rel="stylesheet" href="css/styles.css">
+
   </head>
   <body>
     <h3>Books I have read</h3>
@@ -10,6 +12,6 @@
       <li><a href="https://en.wikipedia.org/wiki/The_Witcher">The Witcher</a></li>
       <li><a href="https://www.tolkien.co.uk/product-category/the-lord-of-the-rings/">LOTR</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Five_Families">The Five Families</a></li>
-    </ul>  
+    </ul>
   </body>
 </html>
